# OneClickKVM

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  justfile  rust-toolchain.toml  rustfmt.toml  sha256.txt
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.svelte  i18n.svelte.ts  ipc.ts  main.ts  theme.svelte.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
app/src/components/: AboutView.svelte  DropZone.svelte  GridView.svelte  Notifications.svelte  PairModal.svelte  PairingBanner.svelte  PeerList.svelte  SettingsView.svelte  StatusBar.svelte  TransferList.svelte  VideoView.svelte  WelcomeCard.svelte
app/src/styles/: global.css
crates/okvm-audio/: Cargo.toml
crates/okvm-audio/src/: cpal_impl.rs  lib.rs
crates/okvm-clipboard/: Cargo.toml
crates/okvm-clipboard/src/: lib.rs  win32.rs
crates/okvm-config/: Cargo.toml
crates/okvm-config/src/: dpapi.rs  lib.rs
crates/okvm-core/: Cargo.toml
crates/okvm-core/src/: caps.rs  error.rs  ids.rs  input.rs  lib.rs  time.rs
crates/okvm-crypto/: Cargo.toml
crates/okvm-crypto/src/: aead.rs  handshake.rs  identity.rs  kdf.rs  lib.rs
crates/okvm-discovery/: Cargo.toml
crates/okvm-discovery/src/: lib.rs  mdns.rs  udp.rs
crates/okvm-files/: Cargo.toml
crates/okvm-files/src/: lib.rs  receiver.rs  sender.rs
crates/okvm-i18n/: Cargo.toml
crates/okvm-i18n/src/: lib.rs
crates/okvm-input-capture/: Cargo.toml
crates/okvm-input-capture/src/: lib.rs  win32.rs
crates/okvm-input-inject/: Cargo.toml
crates/okvm-input-inject/src/: lib.rs  win32.rs
crates/okvm-ipc/: Cargo.toml
crates/okvm-ipc/src/: lib.rs
crates/okvm-logging/: Cargo.toml
crates/okvm-logging/src/: lib.rs
crates/okvm-net/: Cargo.toml
crates/okvm-net/src/: codec.rs  connector.rs  discovery_socket.rs  handshake.rs  lib.rs  listener.rs  session.rs  udp_audio.rs
crates/okvm-net/tests/: loopback.rs
crates/okvm-power/: Cargo.toml
crates/okvm-power/src/: lib.rs
crates/okvm-protocol/: Cargo.toml
crates/okvm-protocol/src/: consts.rs  frame.rs  handshake_msg.rs  lib.rs  messages.rs  serde_helpers.rs
crates/okvm-switch/: Cargo.toml
crates/okvm-switch/src/: lib.rs  screens.rs
crates/okvm-udp/: Cargo.toml
crates/okvm-udp/src/: fec.rs  framing.rs  lib.rs  receiver.rs  sender.rs
crates/okvm-udp/tests/: loopback.rs
crates/okvm-video/: Cargo.toml
crates/okvm-video/src/: d3d11_helper.rs  h264.rs  lib.rs  mediafoundation.rs  mediafoundation_async.rs  mediafoundation_encoder.rs  win32.rs
crates/okvm-wol/: Cargo.toml
crates/okvm-wol/src/: lib.rs
docs/: ARCHITECTURE.md  PROTOCOL.md  RELEASE.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  index.html
scripts/: release.ps1
