[package]
name = "okvm-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Capture WASAPI loopback et lecture audio multi-PC."

[dependencies]
okvm-core.workspace = true
okvm-protocol.workspace = true

async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
cpal = "0.15"
audiopus.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
