[package]
name = "okvm-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration, profils, sauvegarde/restauration, identity DPAPI."

[dependencies]
okvm-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
parking_lot.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
