[package]
name = "okvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Types partagés, identifiants, capabilities, erreurs communes."

[dependencies]
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
bytes.workspace = true
zeroize.workspace = true
base64.workspace = true
hex.workspace = true
