[package]
name = "okvm-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Handshake X25519/Ed25519, AEAD AES-256-GCM, HKDF, identité long-terme."

[dependencies]
okvm-core.workspace = true

serde.workspace = true
thiserror.workspace = true
zeroize.workspace = true
subtle.workspace = true

aes-gcm.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
sha2.workspace = true
rand_core.workspace = true
getrandom.workspace = true

[dev-dependencies]
hex.workspace = true
