[package]
name = "okvm-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Découverte automatique de pairs sur le LAN (mDNS + broadcast UDP)."

[dependencies]
okvm-core.workspace = true
okvm-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
mdns-sd.workspace = true
parking_lot.workspace = true
base64.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
