[package]
name = "okvm-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Internationalisation via Fluent (Mozilla)."

[dependencies]
okvm-core.workspace = true

thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
