[package]
name = "okvm-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport TCP chiffre, multiplexage de canaux, heartbeat, IPv4/IPv6."

[dependencies]
okvm-core.workspace = true
okvm-crypto.workspace = true
okvm-protocol.workspace = true
okvm-udp = { path = "../okvm-udp" }

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
sha2.workspace = true
rand_core.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
