[package]
name = "okvm-wol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wake-on-LAN : émission de magic packets vers les pairs."

[dependencies]
okvm-core.workspace = true

tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
